--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
     <!-- <link rel="stylesheet" href="/style.css"> -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+<!--     <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet' />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
